Fix for "Timestamp on Opinion card not visible"

--- a/assets/scss/components/cards/main.scss
+++ b/assets/scss/components/cards/main.scss
@@ -355,4 +355,8 @@ $alphaville-card__color--yellow-tint3: #b35400;
 		max-height: 81px;
 		overflow: hidden;
 	}
+
+	.alphaville-card__timestamp {
+		color: $alphaville-card__color--yellow-tint2;
+	}
 }
